# mimmo

./: .gitignore  .log_comment_030172016.md.kate-swp  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt_WAITFORNEW  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  INSTALL.md  README.md  README_WINDOWS.md  _config.yml  _config.yml_complete  index.html  license.html  log_comment_030172016.md
binaries/: CMakeLists.txt  MiMMOXml_exec.cpp  mimmo++.cpp  mimmo_template.hpp.in  mimmoxml_exec.cpp
binaries/geodata/: plane1.stl
binaries/input/: geohandlers_input_00003n1.txt  geohandlers_input_00003n2.txt  manipulators_input_00003.csv
binaries/samples/: genericinput_example_00001.xml  geohandlers_example_00001.xml  geohandlers_example_00002.xml  geohandlers_example_00003.xml  manipulators_example_00001.xml  manipulators_example_00002.xml  manipulators_example_00003.xml  manipulators_example_00004.xml  manipulators_example_00005.xml  test1.xml
cmake/: CMakeLists.txt  FindMIMMO.cmake  MIMMOConfig.cmake.in  MIMMOConfigVersion.cmake.in  UseMIMMO.cmake
cmake/project/: LTOFunctions.cmake  cacheVarCleaners.cmake  compilerSettings.cmake  expFeatureFunctions.cmake  libraryMacro.cmake  moduleHandleFunctions.cmake  preprocDefinitionsFunctions.cmake  testHandleFunctions.cmake
examples/: CMakeLists.txt  MIMMO_example_00001.cpp  core_example_00001.cpp  core_example_00002.cpp  genericinput_example_00001.cpp  genericinput_example_00002.cpp  genericinput_example_00003.cpp  genericinput_example_00004.cpp  genericinput_example_00005.cpp  geohandlers_example_00000.cpp  geohandlers_example_00001.cpp  geohandlers_example_00002.cpp  geohandlers_example_00003.cpp  geohandlers_example_00004.cpp  iocgns_example_00001.cpp  iocgns_example_00002.cpp  ioofoam_example_00001.cpp  ioofoam_example_00002.cpp  iovtk_example_00001.cpp  manipulators_example_00001.cpp  manipulators_example_00002.cpp  manipulators_example_00003.cpp  manipulators_example_00004.cpp  manipulators_example_00005.cpp  manipulators_example_00006.cpp  manipulators_example_00007.cpp  manipulators_example_00008.cpp  mm_testing.cpp  parallel_example_00001.cpp  parallel_example_00002.cpp  parallel_example_00003.cpp  parallel_example_00004.cpp  propagators_example_00001.cpp  utils_example_00001.cpp  utils_example_00002.cpp  utils_example_00003.cpp  utils_example_00004.cpp  utils_example_00005.cpp
examples/geodata/: iovtk.vtk  prism.stl
lib/: CMakeLists.txt  LevelSet_Geometry.cpp_WORK  MiMMO_VTKInterfaces.cpp_TOWORK  libAS_TriangleIntersections.cpp_WORK  libRA_AdaptiveLattice.cpp_WORK  libRA_BasicEleShapes.cpp  libRA_BasicMeshes.cpp  libRA_BasicMeshes2D.cpp  libRA_ControlDef.cpp_WORK  libRA_DefSelection.cpp_WORK  libRA_FFD.cpp_WORK  libRA_GEODESIC.cpp_WORK  libRA_Input.cpp_WORK  libRA_Lattice.cpp_WORK  libRA_RGLocRef.cpp_WORK  libRA_RigidRot.cpp_WORK  libRA_SelectionI_O.cpp_WORK  libRA_SupportMesh.cpp  libRA_SurfLattice.cpp_WORK  libRA_utilityDeform.cpp_WORK  lib_STL_IO.cpp
src/: .BasicShapes.cpp.kate-swp  Apply.cpp  Apply.hpp  BaseManipulation.cpp  BaseManipulation.hpp  BaseManipulation.tpp  BasicMeshes.cpp  BasicMeshes.hpp  BasicShapes.cpp  BasicShapes.hpp  Bend.cpp  Bend.hpp  BvTree.cpp  BvTree.hpp  CMakeLists.txt  Chain.cpp  Chain.hpp  Chain.tpp  ClipGeometry.cpp  ClipGeometry.hpp  ControlDeformExtSurface.cpp  ControlDeformExtSurface.hpp  ControlDeformMaxDistance.cpp  ControlDeformMaxDistance.hpp  CoreSelectionPatches.cpp  CoreSelectionPatches.hpp  CreateSeedsOnSurface.cpp  CreateSeedsOnSurface.hpp  CustomManipulationObject.hpp.t  DeformBox.cpp  DeformBox.hpp  DofOut.cpp  DofOut.hpp  DofOut.tpp  FFDLattice.cpp  FFDLattice.hpp  GenericDispls.cpp  GenericDispls.hpp  GenericInput.cpp  GenericInput.hpp  (+93 more)
src/common/: CMakeLists.txt  TrackingPointer.hpp  compiler.hpp  customOperators.cpp  customOperators.hpp  enum.hpp  factory.hpp  mimmo.hpp.in  mimmoTypeDef.hpp  mimmo_binary_stream.cpp  mimmo_binary_stream.hpp  mimmo_binary_stream.tpp  mimmo_common.hpp  mimmo_template.hpp.in  mimmo_version.hpp  portDefinitions.hpp  portManager.hpp
src/core/: BaseManipulation.cpp  BaseManipulation.hpp  BaseManipulation.tpp  BasicMeshes.cpp  BasicMeshes.hpp  BasicShapes.cpp  BasicShapes.hpp  BvTree.cpp  BvTree.hpp  CMakeLists.txt  Chain.cpp  Chain.hpp  CustomManipulationObject.hpp.t  IOConnections.cpp  IOConnections.hpp  InOut.cpp  InOut.hpp  InOut.tpp  Lattice.cpp  Lattice.hpp  MimmoCGUtils.cpp  MimmoCGUtils.hpp  MimmoFvMesh.cpp  MimmoFvMesh.hpp  MimmoNamespace.cpp  MimmoNamespace.hpp  MimmoObject.cpp  MimmoObject.hpp  MimmoPiercedVector.hpp  MimmoPiercedVector.tpp  MimmoSharedPointer.hpp  MimmoSharedPointer.tpp  Module.cpp  Module.hpp  Primitive.cpp  Primitive.hpp  Proj3DCurveOnSurface.cpp  ProjPatchOnSurface.cpp  ProjPrimitivesOnSurfaces.cpp  ProjSegmentOnSurface.cpp  (+11 more)
src/geohandlers/: .SwitchScalarField.cpp.kate-swp  CMakeLists.txt  ClipGeometry.cpp  ClipGeometry.hpp  ExtractFields.cpp  ExtractFields.hpp  ExtractLongField.cpp  ExtractScalarField.cpp  ExtractStringField.cpp  ExtractVectorField.cpp  FVGenericSelection.cpp  FVMeshSelection.hpp  FVSelectionByBox.cpp  FVSelectionByCylinder.cpp  FVSelectionBySphere.cpp  GenericSelection.cpp  MeshSelection.hpp  OverlapScalarFields.cpp  OverlapVectorFields.cpp  OverlappingFields.hpp  ReconstructFields.hpp  ReconstructScalar.cpp  ReconstructVector.cpp  RefineGeometry.cpp  RefineGeometry.hpp  SelectField.cpp  SelectField.hpp  SelectLongField.cpp  SelectScalarField.cpp  SelectStringField.cpp  SelectVectorField.cpp  (+20 more)
test/: .test_MIMMO_00002.cpp.kate-swp  CMakeLists.txt  input.txt  placca.stl  sphere.stl  test_MIMMO_00001.cpp  test_MIMMO_00002.cpp  test_MIMMO_00003.cpp  test_MIMMO_00004.cpp  test_MIMMO_00005.cpp  test_MIMMO_00006.cpp  test_MIMMO_00007.cpp  test_MIMMO_00008.cpp  test_MIMMO_00009.cpp  test_MIMMO_00010.cpp  test_MIMMO_00011.cpp  test_MIMMO_00012.cpp  test_MIMMO_00013.cpp  test_MIMMO_00014.cpp  test_MIMMO_00015.cpp  test_MIMMO_00016.cpp  test_MIMMO_00017.cpp  test_MIMMO_00018.cpp  test_MIMMO_binaryStringPorts.cpp  test_MIMMO_readClouds.cpp
testlib/: CMakeLists.txt
(+5620 files in other folders)
